# project_wiki

./: .gitignore
erp-wiki-mcp/: .env.example  README.linux.md  pyproject.toml  run_server.py  test_server.py
erp-wiki-mcp/src/erp_wiki_mcp/: config.py  server.py
erp-wiki-mcp/src/erp_wiki_mcp/embeddings/: chunker.py  embedder.py  vector_store.py
erp-wiki-mcp/src/erp_wiki_mcp/extractors/: base.py  bootstrap_extractor.py  buildconfig_extractor.py  config_extractor.py  controller_extractor.py  domain_extractor.py  filters_extractor.py  grails_classifier.py  groovy_extractor.py  gsp_extractor.py  integration_extractor.py  interceptor_extractor.py  java_extractor.py  job_extractor.py  jsp_extractor.py  service_extractor.py  spring_dsl_extractor.py  taglib_extractor.py  urlmappings_extractor.py
erp-wiki-mcp/src/erp_wiki_mcp/graph/: deletes.py  queries.py  store.py  upsert.py
erp-wiki-mcp/src/erp_wiki_mcp/hash_gate/: gate.py
erp-wiki-mcp/src/erp_wiki_mcp/orchestrator/: progress.py  runner.py  state.py
erp-wiki-mcp/src/erp_wiki_mcp/parsers/: base.py  groovy_sidecar.py  gsp_parser.py  java_parser.py  jsp_parser.py  properties_parser.py  xml_parser.py  yaml_parser.py
erp-wiki-mcp/src/erp_wiki_mcp/registry/: db.py  models.py
erp-wiki-mcp/src/erp_wiki_mcp/resolver/: __init__.py  call_resolver.py  dangling_sweep.py  di_resolver.py  index_builder.py  render_resolver.py
erp-wiki-mcp/src/erp_wiki_mcp/scanner/: classifier.py  walker.py
erp-wiki-mcp/src/erp_wiki_mcp/tools/: ask.py  change_plan.py  index_project.py  invalidate.py  list_projects.py  query.py  rebuild.py  scaffold.py  status.py  verify_change.py
erp-wiki-mcp/src/erp_wiki_mcp/wiki/: planner.py  router.py
erp-wiki-mcp/tests/fixtures/golden/: minimal_grails_app.json
erp-wiki-mcp/tests/fixtures/grails/: UserController.expected_symbols.json  UserController.groovy
erp-wiki-mcp/tests/fixtures/groovy/: User.expected_symbols.json  User.groovy
erp-wiki-mcp/tests/fixtures/gsp/: list.expected_symbols.json  list.gsp
erp-wiki-mcp/tests/fixtures/java/: UserService.expected_symbols.json  (+1 more)
erp-wiki-mcp/tests/integration/: test_idempotency.py
erp-wiki-mcp/tests/rag/: test_rag_regression.py
erp-wiki-mcp/tests/unit/: test_classifier.py  test_java_extractor.py
erp-wiki-mcp/tools/: groovy_ast_server.groovy
