[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erp-wiki-mcp"
version = "0.1.0"
description = "MCP server for indexing Grails/Java projects into a knowledge graph"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "ERP Wiki MCP Team"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp>=1.0.0",
    "aiosqlite>=0.19.0",
    "blake3>=0.4.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.2.0",
    "gitignore-parser>=0.1.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "kuzu>=0.5.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "PyYAML>=6.0.0",
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "watchdog>=3.0.0",
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
erp-wiki-mcp = "erp_wiki_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/erp_wiki_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
